--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "keywords": [],
   "author": "Simon Edström",
   "license": "MIT",
+  "dependencies": {
+    "@langchain/core": "^0.3.40",
+    "@langchain/openai": "^0.4.4"
+  },
   "devDependencies": {
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
