--- a/examples/package.json
+++ b/examples/package.json
@@ -7,6 +7,7 @@
     "examples/*"
   ],
   "scripts": {
+    "preinstall": "cd ../ && npm run build",
     "build": "tsc -b examples/*",
     "start:app1": "cd ./simple-poetry-app && npm run dev"
   },
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "bdd-autoprompter": "file:..",
     "concurrently": "^9.1.2",
     "live-server": "^1.2.2"
   }
