--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
-    "noErrorTruncation": true
+    "noErrorTruncation": true,
+    "declaration": true,
   },
   
   "include": [
