feat: added more advanced llm example application

--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "preinstall": "cd ../ && npm run build",
     "build": "tsc -b examples/*",
-    "start:app1": "cd ./simple-poetry-app && npm run dev"
+    "start:app1": "cd ./simple-poetry-app && npm run dev",
+    "start:app2": "cd ./conversation-poetry-app && npm run dev"
   },
   "dependencies": {
     "@langchain/core": "^0.3.40",
