--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev1": "cd examples && npm i && npm run start:app1",
+    "dev2": "cd examples && npm i && npm run start:app2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
