--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Automatically verify and improve LLM based application using BDD specifications",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "bddap": "./dist/cli.js"
+  },
   "scripts": {
     "build": "tsc",
     "dev1": "cd examples && npm i && npm run start:app1",
+    "ap1": "cd examples && npm i && npm run bddap:app1",
     "dev2": "cd examples && npm i && npm run start:app2",
+    "ap2": "cd examples && npm i && npm run bddap:app2",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
